--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,6 +9,9 @@
   margin: 0 auto;
   padding: 0 20px;
 }
+html {
+  color-scheme: dark;
+}
 
 input {
   outline: none;
@@ -19,4 +21,3 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
