--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -1,9 +1,71 @@
 .Footer {
-  .content {
-   width: 100%;
-   margin: 60px 0;
-   display: flex;
-   flex-direction: column;
-    
-  }
+	.content {
+		width: 100%;
+		margin: 60px 0;
+		display: flex;
+		flex-direction: column;
+		.navs {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			h1 {
+				color: rgb(255, 255, 255);
+				font-family: Silk Serif;
+				font-size: 28px;
+				font-weight: 600;
+				line-height: 43px;
+				letter-spacing: 0%;
+				text-align: left;
+			}
+			.inWeb {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				gap: 81px;
+				a {
+					color: rgb(255, 255, 255);
+					font-family: Spartan, sans-serif;
+					font-size: 16px;
+					font-weight: 500;
+					&::before {
+						content: '';
+						width: 100%;
+						height: 0px;
+					}
+					&::before:hover {
+						height: 2px;
+					}
+				}
+			}
+			.soc {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				gap: 24px;
+			}
+		}
+		hr {
+			width: 100%;
+			border: 1px solid rgba(255, 255, 255, 0.8);
+			// margin-left: 130px;
+			margin-top: 27px;
+			margin-bottom: 18px;
+		}
+		span {
+			text-align: center;
+			color: rgb(255, 255, 255);
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.Footer {
+		.content {
+			.navs {
+				.inWeb {
+					display: none;
+				}
+			}
+		}
+	}
 }
