--- a/src/components/pages/AllSections/firstSection/firstSection.module.scss
+++ b/src/components/pages/AllSections/firstSection/firstSection.module.scss
@@ -1,185 +1,290 @@
 .FirstSection {
-  // min-height: 90vh;
-  background-image: linear-gradient(
-      180deg,
-      rgba(27, 32, 38, 0.4) 46.81%,
-      rgba(27, 32, 38, 0.8) 100.67%
-    ),
-    url("../../../../images/fisrt_section.png");
-  background-size: cover;
-  background-position: center;
+	background-image: linear-gradient(
+			180deg,
+			rgba(27, 32, 38, 0.4) 46.81%,
+			rgba(27, 32, 38, 0.8) 100.67%
+		),
+		url('../../../../images/fisrt_section.png');
+	background-size: cover;
+	background-position: center;
+	padding-top: 100px;
+	overflow: hidden;
 
-  .content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
-    .mainBlock {
-      margin-top: 150px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      .delicious {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 39px;
+	.content {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		position: relative;
+		gap: 10px;
+		.formWrapper {
+			z-index: 99;
+			position: absolute;
+			right: 0; // Start hidden off the screen
+			width: 335px;
+			height: 339px;
+			margin-bottom: 80px;
+			opacity: 0;
+			transform: translateX(100%); // Move off-screen initially
+			transition: transform 0.5s ease, opacity 0.5s ease; // Combine opacity with transform
+			display: block;
 
-        h4 {
-          font-family: Shalimar;
-          font-size: 40px;
-          font-weight: 400;
-          line-height: 48.8px;
-          text-align: left;
-        }
-      }
+			&.show {
+				transform: translateX(0); // Move to visible position
+				opacity: 1; // Show form
+			}
 
-      h1 {
-        font-family: Silk Serif;
-        font-size: 64px;
-        font-weight: 600;
-        line-height: 98.18px;
-        text-align: left;
-      }
-      p {
-        font-family: Spartan;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 17.92px;
-        text-align: center;
-        width: 500px;
-      }
+			.form {
+				z-index: 990;
+				/* Frame 426 */
+				padding: 59px 0px 0px 23px;
+				position: relative;
+				width: 335px;
+				height: 339px;
+				border-radius: 8px;
+				box-shadow: -1px 0px 23px 1px rgba(207, 207, 207, 0.2);
+				background: rgb(31, 39, 49);
+				button {
+					background-color: transparent;
+					border: none;
+					width: 290px;
+					height: 59px;
+					border-radius: 4px;
+					cursor: pointer;
+					background: rgb(239, 39, 44);
+					transition: 0.3s ease-in-out;
+					&:hover {
+						transform: scale(1.1);
+					}
+				}
+			}
 
-      .btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        margin-top: 10px;
-        gap: 8px;
-        button {
-          border: 1.6px solid #ef272c;
-          padding: 12px 22px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 7px;
-          font-family: Spartan;
-          font-size: 12px;
-          font-weight: 600;
-          line-height: 13.44px;
-          text-align: left;
-          background: none;
-        }
-        hr {
-          width: 130px;
-          border: 1.4px solid #ef272c;
-        }
-      }
-    }
+			.inputWrapper {
+				/* Frame 16 */
+				display: flex;
+				align-items: center;
+				width: 223px;
+				margin-bottom: 35px;
+				height: 52px;
+				left: 23px;
+				top: 59px;
+				display: flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				align-items: center;
+				gap: 16;
 
-    .contact {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-top: 130px;
-      margin-bottom: 30px;
+				.reserve {
+					input {
+						background-color: transparent;
+						border: none;
+						width: 154px;
+						height: 19px;
+						display: flex;
+						flex-direction: column;
+						color: rgb(187, 187, 187);
+						font-size: 17px;
+						color: rgb(16, 159, 239);
 
-      .location {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
+						&::placeholder {
+							color: rgb(187, 187, 187);
+						}
+					}
+				}
+				.circle {
+					width: 52px;
+					height: 52px;
+					background-color: white;
+					border-radius: 50%;
+					display: inline-block;
+				}
+				h1 {
+					margin: 10px 0px;
+					color: rgb(255, 255, 255);
+					font-family: sans-serif;
+					font-size: 12px;
+					font-weight: 400;
+					line-height: 13px;
+				}
+			}
+		}
+		.backdrop {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.6);
+			z-index: 88;
+			opacity: 0;
+			transition: opacity 0.3s ease;
+			&.show {
+				opacity: 1;
+			}
+		}
 
-        h5 {
-          font-family: Spartan;
-          font-size: 14px;
-          font-weight: 600;
-          line-height: 15.68px;
-          text-align: left;
-        }
-        hr {
-          border: 0.6px solid #ffffff;
-          width: 56px;
-        }
-        span {
-          font-family: Spartan;
-          font-size: 12px;
-          font-weight: 500;
-          line-height: 13.44px;
-          text-align: left;
-        }
-      }
-    }
-  }
+		.mainBlock {
+			margin-top: 150px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+
+			.hero {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 10px;
+				margin-bottom: 18px;
+
+				h1 {
+					font-family: Shalimar;
+					font-size: 40px;
+					font-weight: 400;
+					line-height: 48.8px;
+				}
+			}
+
+			h1 {
+				font-family: Silk Serif;
+				font-size: 64px;
+				font-weight: 600;
+				line-height: 98.18px;
+				text-align: left;
+			}
+			p {
+				font-family: Spartan;
+				font-size: 16px;
+				font-weight: 500;
+				line-height: 17.92px;
+				text-align: center;
+				width: 500px;
+			}
+
+			.btn {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-direction: column;
+				margin-top: 10px;
+				gap: 8px;
+				position: relative;
+
+				hr {
+					width: 130px; /* ширина линий */
+					border: 1.4px solid #ef272c; /* цвет линий */
+					transition: transform 0.4s ease-in-out; /* плавный переход для трансформации */
+				}
+
+				.formContact {
+					border: 1.6px solid #ef272c;
+					padding: 12px 22px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					gap: 7px;
+					font-family: Spartan;
+					font-size: 12px;
+					font-weight: 600;
+					line-height: 13.44px;
+					text-align: left;
+					transition: background-color 0.4s ease-in-out;
+					cursor: pointer;
+					background: none;
+					.arrow {
+						transition: all 0.4s ease-in-out;
+					}
+					&:hover {
+						background-color: red;
+						.arrow {
+							margin-left: 5px;
+						}
+					}
+				}
+
+				&:hover {
+					hr:first-of-type {
+						transform: translateY(10px); /* Сдвиг верхней линии вправо */
+					}
+					hr:last-of-type {
+						transform: translateY(-10px); /* Сдвиг нижней линии влево */
+					}
+				}
+			}
+
+			// New styles for the form
+		}
+
+		.contact {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			margin-top: 130px;
+			margin-bottom: 30px;
+
+			.location {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 10px;
+
+				h5 {
+					font-family: Spartan;
+					font-size: 14px;
+					font-weight: 600;
+					line-height: 15.68px;
+					text-align: left;
+				}
+				hr {
+					border: 0.6px solid #ffffff;
+					width: 56px;
+				}
+				span {
+					font-family: Spartan;
+					font-size: 12px;
+					font-weight: 500;
+					line-height: 13.44px;
+					text-align: left;
+				}
+			}
+		}
+	}
 }
 
+/* Медиа-запросы остаются без изменений */
 @media (max-width: 760px) {
-  .FirstSection {
-    .content {
-      .contact {
-        .location {
-          display: flex;
-          align-items: start;
-          justify-content: center;
-          flex-direction: column;
-          gap: 10px;
-          img {
-            display: none;
-          }
-        }
-      }
-    }
-  }
+	.FirstSection {
+		.content {
+			.contact {
+				.location {
+					display: flex;
+					align-items: start;
+					justify-content: center;
+					flex-direction: column;
+					gap: 10px;
+					img {
+						display: none;
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: 505px) {
-  .FirstSection {
-    .content {
-      .mainBlock {
-        .delicious {
-          h4 {
-            font-size: 20px;
-          }
-          h1 {
-            font-size: 44px;
-          }
-        }
-        h1 {
-          font-size: 44px;
-        }
-        p {
-          font-size: 12px;
-          width: 250px;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 415px) {
-  .FirstSection {
-    .content {
-      .mainBlock {
-        .delicious {
-          h4 {
-            font-size: 15px;
-          }
-          h1 {
-            font-size: 33px;
-          }
-        }
-        h1 {
-          font-size: 33px;
-        }
-        p {
-          font-size: 10px;
-          width: 200px;
-        }
-      }
-    }
-  }
+	.FirstSection {
+		.content {
+			.mainBlock {
+				.delicious {
+					h4 {
+						font-size: 32px;
+					}
+				}
+				h1 {
+					font-size: 44px;
+				}
+			}
+		}
+	}
 }
