--- a/src/components/pages/AllSections/menuSection/menusection.module.scss
+++ b/src/components/pages/AllSections/menuSection/menusection.module.scss
@@ -156,6 +156,7 @@
 		width: 238.01px;
 		left: 15%; // Adjust this value as needed for positioning
 		bottom: 6.2px;
+		opacity: 0.6;
 		border: 0.4px solid rgb(229, 229, 229);
 		transition: all 0.3s ease;
 	}
