--- a/src/components/pages/AllSections/firstSection/firstSection.module.scss
+++ b/src/components/pages/AllSections/firstSection/firstSection.module.scss
@@ -194,6 +194,9 @@
   .FirstSection {
     .content {
       .mainBlock {
+        p {
+          width: 350px;
+        }
         .delicious {
           h4 {
             font-size: 32px;
