--- a/src/components/pages/AllSections/fifthSection/visitRestaurant.module.scss
+++ b/src/components/pages/AllSections/fifthSection/visitRestaurant.module.scss
@@ -81,8 +81,8 @@
       }
 
       .block2 {
-        width: 47%;
-        height: 380px;
+        width: 550px;
+        height: 400px;
         border-radius: 2px;
         background: #ef272c;
         padding: 30px;
@@ -107,19 +107,73 @@
             gap: 10px;
           }
         }
+        .map {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          max-width: 400px;
+          height: 180px;
+          margin-left: 45px;
+        }
       }
     }
   }
 }
 
-@media (max-width: 768px) {
+// @media (max-width: 1100px) {
+//   .VisitRestaurant {
+//     .content {
+//       .box {
+//         .block {
+//         }
+//         .block2 {
+//           width: 400px;
+
+//           .map {
+//             margin-left: 0;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+@media (max-width: 925px) {
   .VisitRestaurant {
     .content {
       .box {
-        display: flex;
         align-items: start;
         justify-content: start;
         flex-direction: column;
+        .block {
+          width: 100%;
+        }
+        .block2 {
+          padding: 20 0;
+          height: max-content;
+          h3 {
+            display: none;
+          }
+          background: none;
+          .contact {
+            display: none;
+          }
+          .number {
+            display: none;
+          }
+
+          .map {
+            display: flex;
+            align-items: start;
+            justify-content: start;
+            margin-left: 0;
+            iframe {
+              width: 300px;
+              height: 250px;
+            }
+          }
+        }
       }
     }
   }
