--- a/src/components/pages/AllSections/fourthSection/interior.module.scss
+++ b/src/components/pages/AllSections/fourthSection/interior.module.scss
@@ -11,6 +11,7 @@
     flex-direction: column;
     gap: 20px;
     .hero {
+      width: max-content;
       display: flex;
       align-items: center;
       justify-content: center;
