--- a/src/components/pages/AllSections/secondSection/about.module.scss
+++ b/src/components/pages/AllSections/secondSection/about.module.scss
@@ -8,7 +8,7 @@
     align-items: start;
     justify-content: start;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
 
     .hero {
       display: flex;
@@ -27,13 +27,12 @@
     .block {
       width: 100%;
       display: flex;
-      align-items: center;
+      align-items: start;
       justify-content: space-between;
       gap: 20px;
 
       h1 {
-        max-width: 450px;
-        width: 100%;
+        width: 500px;
         font-family: Silk Serif;
         font-size: 40px;
         font-weight: 600;
@@ -41,12 +40,12 @@
       }
 
       p {
+        width: 530px;
         font-family: Spartan;
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 400;
         line-height: 24px;
-        width: 530px;
-        margin-right: 20px;
+        margin-right: 50px;
       }
     }
 
@@ -64,99 +63,59 @@
       }
     }
   }
+}
 
-  @media (max-width: 1250px) {
-    .content {
-      .block {
-        p {
-          width: 100%;
-        }
-      }
-
-      .images {
-        // img {
-        //   max-width: 80%;
-        //   height: auto;
-        // }
-      }
-    }
-  }
-
-  @media (max-width: 1024px) {
+@media (max-width: 1000px) {
+  .About {
     .content {
       .block {
         h1 {
-          font-size: 35px;
-          width: 100%;
+          width: 400px;
         }
-
         p {
-          width: 100%;
-          margin-right: 0;
+          // width: 500px;
         }
       }
-
       .images {
-        align-items: center;
-        // img {
-        //   max-width: 50%;
-        //   height: auto;
-        // }
+        flex-direction: column;
       }
     }
   }
+}
 
-  @media (max-width: 768px) {
-    padding: 60px 0;
-
+@media (max-width: 930px) {
+  .About {
     .content {
-      .hero h1 {
-        font-size: 30px;
-      }
-
       .block {
         align-items: start;
         justify-content: start;
         flex-direction: column;
-        h1 {
-          font-size: 30px;
-        }
 
         p {
-          font-size: 14px;
+          width: 500px;
         }
       }
-
       .images {
         flex-direction: column;
       }
     }
   }
+}
 
-  @media (max-width: 550px) {
-    padding: 40px 0;
-
+@media (max-width: 600px) {
+  .About {
     .content {
-      .hero h1 {
-        font-size: 25px;
-      }
-
       .block {
+        align-items: start;
+        justify-content: start;
         flex-direction: column;
-        h1 {
-          font-size: 25px;
-        }
 
         p {
-          font-size: 12px;
+          width: 300px;
         }
       }
-
       .images {
         flex-direction: column;
-        img {
-          width: 100%;
-        }
       }
     }
   }
