--- a/src/components/pages/AllSections/thirdSection/Swiper/swiper.module.scss
+++ b/src/components/pages/AllSections/thirdSection/Swiper/swiper.module.scss
@@ -9,69 +9,53 @@
     width: 100%;
     max-width: 600px;
     img {
+      width: 100%;
       border-radius: 4px;
       object-fit: cover;
     }
   }
 
   .btn {
-    position: relative; /* Или absolute */
-    z-index: 10;
     cursor: pointer;
   }
 }
-@media (max-width: 1024px) {
-  .content {
-    .swiperContainer {
-      img {
-        width: 90%;
-        height: auto;
-      }
-    }
+// @media (max-width: 1150px) {
+//   .content {
+//     .swiperContainer {
+//       img {
+//       }
+//     }
 
-    .btn {
-      img {
-        width: 20px;
-        height: 35px;
-      }
-    }
-  }
-}
+//     .btn {
+//       img {
+//       }
+//     }
+//   }
+// }
 
-@media (max-width: 844px) {
-  .content {
-    .swiperContainer {
-      width: 100%;
+// @media (max-width: 844px) {
+//   .content {
+//     .swiperContainer {
+//       img {
+//       }
+//     }
 
-      img {
-        width: 100%;
-        height: auto;
-      }
-    }
-
-    .btn {
-      img {
-        width: 18px;
-        height: 32px;
-      }
-    }
-  }
-}
+//     .btn {
+//       img {
+//       }
+//     }
+//   }
+// }
 
 @media (max-width: 480px) {
   .content {
     .swiperContainer {
-      width: 100%;
       img {
-        width: 100%;
-        height: auto;
       }
     }
 
     .btn {
       img {
-        width: 16px;
-        height: 30px;
       }
     }
   }
