--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -42,6 +42,11 @@
 				align-items: center;
 				justify-content: space-between;
 				gap: 24px;
+				a {
+					img {
+						filter: brightness(0) invert(1); /* Применяем фильтр */
+					}
+				}
 			}
 		}
 		hr {
@@ -64,6 +69,21 @@
 			.navs {
 				.inWeb {
 					display: none;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 320px) {
+	.Footer {
+		.conten {
+			.navs {
+				.soc {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					gap: 0px;
 				}
 			}
 		}
