--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,231 +1,231 @@
 .Header {
-  padding-block: 18px;
-  background: rgb(27, 32, 38);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
-  .progressBar {
-    position: fixed;
-    top: 73px;
-    left: 0;
-    right: 0;
-    height: 3px;
-    background: rgb(239, 39, 44);
-    transform-origin: 0%;
-  }
-  .content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 80px;
-    .navCheck {
-      display: none;
-    }
+	padding-block: 18px;
+	background: rgb(27, 32, 38);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 1000;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+	.progressBar {
+		position: fixed;
+		top: 73px;
+		left: 0;
+		right: 0;
+		height: 3px;
+		background: rgb(239, 39, 44);
+		transform-origin: 0%;
+	}
+	.content {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 80px;
+		.navCheck {
+			display: none;
+		}
 
-    .logo {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+		.logo {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
 
-    .navigation {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 81px;
+		.navigation {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 81px;
 
-      a {
-        width: max-content;
-        position: relative;
-        color: white;
-        font-size: 18px;
-        font-weight: 600;
-        text-decoration: none;
-        transition: color 0.3s ease;
+			a {
+				width: max-content;
+				position: relative;
+				color: white;
+				font-size: 18px;
+				font-weight: 600;
+				text-decoration: none;
+				transition: color 0.3s ease;
 
-        &::before {
-          position: absolute;
-          content: "";
-          width: 0;
-          height: 2px;
-          bottom: -5px;
-          left: 50%;
-          transform: translateX(-50%);
-          background-color: white;
-          transition: width 0.3s ease;
-        }
+				&::before {
+					position: absolute;
+					content: '';
+					width: 0;
+					height: 2px;
+					bottom: -5px;
+					left: 50%;
+					transform: translateX(-50%);
+					background-color: white;
+					transition: width 0.3s ease;
+				}
 
-        &:hover {
-          color: rgb(239, 39, 44);
+				&:hover {
+					color: rgb(239, 39, 44);
 
-          &::before {
-            width: 100%;
-          }
-        }
-      }
-    }
+					&::before {
+						width: 100%;
+					}
+				}
+			}
+		}
 
-    .block {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 81px;
-      flex-direction: row;
-    }
+		.block {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			gap: 81px;
+			flex-direction: row;
+		}
 
-    .search {
-      position: relative;
-      transition: 0.4s ease-in-out;
+		.search {
+			position: relative;
+			transition: 0.4s ease-in-out;
 
-      input {
-        padding: 8px 12px 8px 36px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        outline: none;
-        transition: all 0.3s ease;
-        width: 187px;
-        height: 37px;
-        border: 0.8px solid rgba(86, 9, 187, 0.2);
-        border-radius: 8px;
-        background: rgb(239, 39, 44);
-        opacity: 0.8;
-        color: white;
+			input {
+				padding: 8px 12px 8px 36px;
+				border: 1px solid #ccc;
+				border-radius: 4px;
+				outline: none;
+				transition: all 0.3s ease;
+				width: 187px;
+				height: 37px;
+				border: 0.8px solid rgba(86, 9, 187, 0.2);
+				border-radius: 8px;
+				background: rgb(239, 39, 44);
+				opacity: 0.8;
+				color: white;
 
-        &:focus {
-          border-color: #ff6347;
-          box-shadow: 0 0 5px rgba(255, 99, 71, 0.5);
-          transform: scale(1.1);
-        }
+				&:focus {
+					border-color: #ff6347;
+					box-shadow: 0 0 5px rgba(255, 99, 71, 0.5);
+					transform: scale(1.1);
+				}
 
-        &::placeholder {
-          color: white;
-          opacity: 1;
-        }
-      }
+				&::placeholder {
+					color: white;
+					opacity: 1;
+				}
+			}
 
-      svg {
-        position: absolute;
-        left: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 15px;
-        height: 15px;
+			svg {
+				position: absolute;
+				left: 10px;
+				top: 50%;
+				transform: translateY(-50%);
+				width: 15px;
+				height: 15px;
 
-        path {
-          fill: #fff;
-        }
-      }
-      &:hover {
-        transform: scale(1.1);
-      }
-    }
+				path {
+					fill: #fff;
+				}
+			}
+			&:hover {
+				transform: scale(1.1);
+			}
+		}
 
-    select {
-      appearance: none;
-      border: none;
-      padding: 8px;
-      background: transparent;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      color: rgb(255, 255, 255);
-      font-family: Silk Serif;
-      font-size: 14px;
-      font-weight: 600;
-      line-height: 21px;
+		select {
+			appearance: none;
+			border: none;
+			padding: 8px;
+			background: transparent;
+			cursor: pointer;
+			transition: background 0.3s ease;
+			color: rgb(255, 255, 255);
+			font-family: Silk Serif;
+			font-size: 14px;
+			font-weight: 600;
+			line-height: 21px;
 
-      &:focus {
-        outline: none;
-      }
+			&:focus {
+				outline: none;
+			}
 
-      option {
-        background: white;
-        color: #333;
-      }
+			option {
+				background: white;
+				color: #333;
+			}
 
-      &:hover {
-        background: rgba(255, 99, 71, 0.1);
-      }
-    }
+			&:hover {
+				background: rgba(255, 99, 71, 0.1);
+			}
+		}
 
-    .burgerMenu {
-      display: none;
-    }
-  }
+		.burgerMenu {
+			display: none;
+		}
+	}
 }
 
 @media (max-width: 1024px) {
-  .Header {
-    .content {
-      .logo {
-        font-size: 24px;
-        font-weight: 300;
-      }
-      .navigation {
-        gap: 30px;
-      }
-      .block {
-        gap: 30px;
-      }
-    }
-  }
+	.Header {
+		.content {
+			.logo {
+				font-size: 24px;
+				font-weight: 300;
+			}
+			.navigation {
+				gap: 30px;
+			}
+			.block {
+				gap: 30px;
+			}
+		}
+	}
 }
 
 @media (max-width: 768px) {
-  .Header {
-    .content {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      .navBtn {
-        display: inline-block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding-top: 0.2rem;
-        label {
-          display: inline-block;
-          width: 50px;
-          height: 50px;
-          padding: 13px;
-          span {
-            display: block;
-            width: 25px;
-            height: 10px;
-            border-top: 2px solid #eee;
-          }
-        }
-      }
+	.Header {
+		.content {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			.navBtn {
+				display: inline-block;
+				position: absolute;
+				right: 0;
+				top: 0;
+				padding-top: 0.2rem;
+				label {
+					display: inline-block;
+					width: 50px;
+					height: 50px;
+					padding: 13px;
+					span {
+						display: block;
+						width: 25px;
+						height: 10px;
+						border-top: 2px solid #eee;
+					}
+				}
+			}
 
-      .navigation {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        width: 100%;
-        background-color: #1a237e;
-        height: 0;
-        transition: all 0.3s ease-in;
-        top: 40px;
-        left: 0;
-        overflow: hidden;
-        a {
-          width: 100%;
-          margin-top: 1.5rem;
-        }
-      }
-      .navCheck:checked ~ .navigation {
-        height: calc(100vh - 50px);
-      }
-      .block {
-        display: none;
-      }
+			.navigation {
+				position: absolute;
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+				width: 100%;
+				background-color: #1a237e;
+				height: 0;
+				transition: all 0.3s ease-in;
+				top: 40px;
+				left: 0;
+				overflow: hidden;
+				a {
+					width: 100%;
+					margin-top: 1.5rem;
+				}
+			}
+			.navCheck:checked ~ .navigation {
+				height: calc(100vh - 50px);
+			}
+			.block {
+				display: none;
+			}
 
-      .burgerMenu {
-        display: flex;
-      }
-    }
-  }
+			.burgerMenu {
+				display: flex;
+			}
+		}
+	}
 }
