--- a/src/components/ui/Menu/Menu.module.scss
+++ b/src/components/ui/Menu/Menu.module.scss
@@ -116,8 +116,6 @@
 					border: none;
 					outline: none;
 				}
-				img {
-				}
 				.notTogether {
 					padding: 0 12px;
 					display: flex;
@@ -310,6 +308,94 @@
 					padding-right: 10px;
 					button {
 						top: -25px;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 430px) {
+	.Menu {
+		.content {
+			.menuitems {
+				.selectedItem {
+					position: fixed;
+					top: -200px;
+					left: -65px;
+					width: 100vw;
+					height: 100vh;
+					z-index: 9999;
+					// background-color: rgba(31, 39, 49, 0.95); // Полупрозрачный фон
+					overflow-y: hidden; // Позволяет прокрутку внутри selectedItem
+					padding-top: 71px;
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: space-around;
+
+					// Дополнительные стили для элементов внутри selectedItem
+					.notTogether {
+						padding-left: 0;
+						margin-bottom: 0;
+						padding-bottom: 0;
+					}
+					.rightItems {
+						width: 327px;
+						margin-left: 0;
+						margin-top: 0;
+						margin-bottom: 350px;
+						padding-top: 0;
+
+						h4 {
+							color: rgb(255, 255, 255);
+							font-family: 'Spartan', sans-serif;
+							font-size: 18px;
+							font-weight: 600;
+							line-height: 20px;
+						}
+						ul {
+							list-style: none;
+							li {
+								display: flex;
+								align-items: center;
+								justify-content: space-between;
+								margin-top: 12px;
+								color: rgb(147, 147, 147);
+								font-family: 'Spartan', sans-serif;
+								font-size: 15px;
+								font-weight: 500;
+							}
+						}
+					}
+					button {
+						top: 0;
+						left: 0;
+					}
+				}
+				.alls {
+					.menuItem {
+						height: 80px;
+						background-color: transparent;
+						width: 335px;
+						display: flex;
+						gap: 12px;
+						.menuItemHeader {
+							display: flex;
+							img {
+								width: 101px;
+								height: 80px;
+								object-fit: cover;
+							}
+							.notTogether {
+								display: flex;
+								flex-wrap: wrap;
+								.together {
+									h2 {
+										color: white;
+									}
+								}
+							}
+						}
 					}
 				}
 			}
