--- a/src/components/pages/AllSections/fifthSection/visitRestaurant.module.scss
+++ b/src/components/pages/AllSections/fifthSection/visitRestaurant.module.scss
@@ -175,3 +175,15 @@
 		}
 	}
 }
+
+@media (max-width: 768px) {
+	.VisitRestaurant {
+		.content {
+			.box {
+				.block2 {
+					width: 0px;
+				}
+			}
+		}
+	}
+}
