--- a/src/components/ui/Loader/Loader.module.scss
+++ b/src/components/ui/Loader/Loader.module.scss
@@ -10,11 +10,12 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
+	color: #ffffff; /* Белый цвет текста */
 }
 .loading div {
 	text-align: center;
 	font-size: 1.2em;
-	color: #ffffff;
+	color: #ffffff; /* Белый цвет текста */
 }
 
 /* Transparent Overlay */
@@ -26,20 +27,22 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgba(0, 0, 0, 0.3); /* Полупрозрачный черный фон */
+	color: white;
 }
 
 /* :not(:required) hides these rules from IE9 and below */
 .loading:not(:required) {
-	/* hide "loading..." text */
 	font: 0/0 a;
 	color: transparent;
 	text-shadow: none;
 	background-color: transparent;
 	border: 0;
+	color: white; /* Удалено, но оставлено на всякий случай */
 }
 
 .loading:not(:required):after {
+	color: #ffffff; /* Белый цвет анимации */
 	content: '';
 	display: block;
 	font-size: 10px;
@@ -52,81 +55,30 @@
 	-o-animation: spinner 1500ms infinite linear;
 	animation: spinner 1500ms infinite linear;
 	border-radius: 0.5em;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0,
-		rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0,
-		rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0,
-		rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0,
-		rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
-	box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0,
-		rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0,
-		rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0,
-		rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0,
-		rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
+	-webkit-box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0,
+		rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0,
+		rgba(255, 255, 255, 0.75) 0 1.5em 0 0,
+		rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0,
+		rgba(255, 255, 255, 0.5) -1.5em 0 0 0,
+		rgba(255, 255, 255, 0.5) -1.1em -1.1em 0 0,
+		rgba(255, 255, 255, 0.75) 0 -1.5em 0 0,
+		rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
+	box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0,
+		rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0,
+		rgba(255, 255, 255, 0.75) 0 1.5em 0 0,
+		rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0,
+		rgba(255, 255, 255, 0.75) -1.5em 0 0 0,
+		rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0,
+		rgba(255, 255, 255, 0.75) 0 -1.5em 0 0,
+		rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
 }
 
 /* Animation */
-
-@-webkit-keyframes spinner {
-	0% {
-		-webkit-transform: rotate(0deg);
-		-moz-transform: rotate(0deg);
-		-ms-transform: rotate(0deg);
-		-o-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		-moz-transform: rotate(360deg);
-		-ms-transform: rotate(360deg);
-		-o-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
-}
-@-moz-keyframes spinner {
-	0% {
-		-webkit-transform: rotate(0deg);
-		-moz-transform: rotate(0deg);
-		-ms-transform: rotate(0deg);
-		-o-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		-moz-transform: rotate(360deg);
-		-ms-transform: rotate(360deg);
-		-o-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
-}
-@-o-keyframes spinner {
-	0% {
-		-webkit-transform: rotate(0deg);
-		-moz-transform: rotate(0deg);
-		-ms-transform: rotate(0deg);
-		-o-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		-moz-transform: rotate(360deg);
-		-ms-transform: rotate(360deg);
-		-o-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
-}
 @keyframes spinner {
 	0% {
-		-webkit-transform: rotate(0deg);
-		-moz-transform: rotate(0deg);
-		-ms-transform: rotate(0deg);
-		-o-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: rotate(360deg);
-		-moz-transform: rotate(360deg);
-		-ms-transform: rotate(360deg);
-		-o-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
 }
