--- a/src/components/pages/AllSections/secondSection/about.module.scss
+++ b/src/components/pages/AllSections/secondSection/about.module.scss
@@ -1,7 +1,7 @@
 .About {
   width: 100%;
   background-color: #1b2026;
-  padding: 100px 0;
+  padding: 120px 0;
 
   .content {
     display: flex;
@@ -32,7 +32,7 @@
       gap: 20px;
 
       h1 {
-        width: 500px;
+        width: 100%;
         font-family: Silk Serif;
         font-size: 40px;
         font-weight: 600;
@@ -40,12 +40,12 @@
       }
 
       p {
-        width: 530px;
+        width: 100%;
         font-family: Spartan;
         font-size: 18px;
         font-weight: 400;
         line-height: 24px;
-        margin-right: 50px;
+        // margin-right: 50px;
       }
     }
 
@@ -53,7 +53,7 @@
       width: 100%;
       margin-top: 10px;
       display: flex;
-      align-items: start;
+      align-items: center;
       justify-content: space-between;
       gap: 20px;
 
@@ -71,9 +71,6 @@
       .block {
         h1 {
           width: 400px;
-        }
-        p {
-          // width: 500px;
         }
       }
       .images {
@@ -110,8 +107,13 @@
         justify-content: start;
         flex-direction: column;
 
+        h1 {
+          width: 250px;
+          font-size: 24;
+        }
         p {
           width: 300px;
+          font-size: 14;
         }
       }
       .images {
